# ReadyTrader-Crypto

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Makefile  README.md  RUNBOOK.md  SECURITY.md  api_server.py  backtest_engine.py  bandit.yaml  cache.py  dex_handler.py  docker-compose.mpc-signer.yml  docker-compose.sentinel.yml  docker-compose.yml  env.example  errors.py  exchange_provider.py  execution_store.py  idempotency_store.py  intelligence.py  paper_engine.py  policy_engine.py  pyproject.toml  rate_limiter.py  requirements-dev.txt  requirements.lock.txt  requirements.txt  risk_manager.py  server.py  smithery.yaml  stress_test_engine.py  synthetic_market.py  verify_server.py
.github/: secret-scanning.md
.github/workflows/: ci.yml  live-path-tests.yml  security-audit.yml
app/: main.py
app/core/: config.py  container.py  settings.py
app/tools/: execution.py  market_data.py  research.py  trading.py
configs/: README.md  agent_zero.mcp.yaml  claude_desktop.mcp-server-config.json
defi/: __init__.py  aave_v3.py  uniswap_v3.py
deploy/observability/: alertmanager.yml  docker-compose.yml  grafana-dashboard.json  prometheus-alerts.yml  prometheus.yml
docs/: CUSTODY.md  ERRORS.md  README.md  THREAT_MODEL.md  TOOLS.md
examples/: paper_quick_demo.py  stress_test_demo.py
execution/: __init__.py  binance_user_stream.py  cex_executor.py  coinbase_user_stream.py  evm.py  kraken_user_stream.py  models.py  private_updates.py  retry.py  router.py
frontend/: Dockerfile  next.config.ts
frontend/public/: manifest.json  sw.js
intelligence/: __init__.py  insights.py
marketdata/: __init__.py  bus.py  store.py  ws_streams.py
mpc_signer/: Dockerfile  README.md  go.mod  go.sum  main.go
observability/: __init__.py  audit.py  webhooks.py
prompts/: READYTRADER_PROMPT_PACK.md
sentinel/: app.py
signing/: __init__.py  base.py  cb_mpc_2pc.py  encrypted_keystore.py  env_private_key.py  factory.py  intents.py  policy.py  remote_signer.py
strategy/: __init__.py  marketplace.py
tests/: conftest.py  test_app_structure.py  test_backtest.py  test_exchange_provider.py  test_no_stubs_policy.py  test_phase6_ops.py  test_remote_signer.py  test_risk.py  test_server.py  test_signer_policy.py  test_stream_lifecycle.py  test_synthetic_stress.py
tools/: generate_tool_docs.py  setup_wizard.py
(+10 files in other folders)
